--- a/app/views/home/contact.html.erb
+++ b/app/views/home/contact.html.erb
@@ -1,9 +1,18 @@
 <br>
 <div class="jumbotron">
-  <h1>Contact Info</h1>
-<p>If you have any questions feel free to contact me anytime.</p>
-<ul>
-  <li>Email: studiojannmarie@gmail.com</li>
-  <li>Phone Number: (805) 341-0562</li>
-</ul>
+  <div class="col-sm-8">
+    <h1>Contact Info</h1>
+    <p>Please get in touch with me for pricing. Cost will vary depending on the<br> size and style of your dress.</p>
+  </div>
+  <div class="text-center">
+    <h2><%= image_tag("logos/JMBL.png", width: '200px') %></h2>
+  </div>
+</div>
+<div class="col-sm-8">
+  <h3>Please feel free to send me images, thoughts and ideas of what inspires you.</h3>
+  <p><strong>Email:<stong> studiojannmarie@gmail.com<p>
+  <p>Phone Number: (805) 341-0562<p>
+</div>
+<div class="col-sm-4">
+  <%= image_tag("wedding/hanging-dress.png", class: "img-rounded", width: '400px', height: '550px') %>
 </div>
