--- a/app/views/home/index.html.erb
+++ b/app/views/home/index.html.erb
@@ -16,11 +16,11 @@
 </div>
   <div class="row">
    <div class="col-sm-4">
-     <%= image_tag("wedding/beeded_dress.png", class: "img-rounded", width: '350px') %>
+     <%= image_tag("wedding/beeded_dress.png", class: "img-rounded", width: '450px', height: '450px') %>
    </div>
    <div class="col-sm-4">
-     <%= image_tag("wedding/flow_dress.png", class: "img-rounded", width: '350px') %>
+     <%= image_tag("wedding/flow_dress.png", :align=> "middle", class: "img-rounded", width: '450px', height: '450px') %>
    </div>
    <div class="col-sm-4">
-     <%= image_tag("wedding/display_dress.png", class: "img-rounded", width: '350px') %>
+     <%= image_tag("wedding/display_dress.png", :align=> "right", class: "img-rounded", width: '450px', height: '450px') %>
    </div>
