--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -46,9 +46,12 @@
       <% end %>
      <%= yield %>
    </div><br>
-<footer class="container-fluid text-center">
-  <p>Jann Marie Bridal</p>
-</footer>
+
+   <footer>
+    <div class="container-fluid text-center">
+      <p>Click <a href="http://www.jannmariebridal.com">here</a> to visit the official site of Jann Marie Bridal</p>
+    </div>
+   </footer>
 
 </body>
 </html>
