--- a/app/views/user_profiles/index.html.erb
+++ b/app/views/user_profiles/index.html.erb
@@ -1,6 +1,12 @@
 <br>
 <div class="jumbotron">
-  <h1>Client Profiles</h1>
+  <div class="col-sm-8">
+    <h1>Client Profiles</h1>
+    <p>Measure twice cut once</p>
+  </div>
+  <div class="text-center">
+    <h2><%= image_tag("logos/JMBL.png", width: '200px') %></h2>
+  </div>
 </div>
 <% @user_profiles.each do |user_profile| %>
   <div class="media">
