--- a/app/views/user_profiles/new.html.erb
+++ b/app/views/user_profiles/new.html.erb
@@ -1,6 +1,12 @@
 <br>
 <div class="jumbotron">
-<h1>Create Csutom Dress Profile</h1>
+  <div class="col-sm-8">
+    <h1>Create Your Profile</h1>
+    <p>This is going to be fun!</p>
+  </div>
+  <div class="text-center">
+    <h2><%= image_tag("logos/JMBL.png", width: '200px') %></h2>
+  </div>
 </div>
 
 <div class="col-md-8">
