--- a/app/views/home/about.html.erb
+++ b/app/views/home/about.html.erb
@@ -1,5 +1,21 @@
 <br>
 <div class="jumbotron">
+  <div class="col-sm-8">
   <h1>About Jann Marie Bridal</h1>
-  <p>Best damn custom dresses around!</p>
+  <p>Best damn seemstress around!</p>
+  </div>
+  <div class="text-center">
+    <h2><%= image_tag("logos/JMBL.png", width: '200px') %></h2>
+  </div>
+</div>
+<div class="col-sm-4">
+  <%= image_tag("wedding/about_jann.png", class: "img-rounded", width: '450px', height: '450px') %>
+</div>
+<div class="col-sm-8">
+  <h3>I Am Jann Marie</h3>
+  <p>I am 30 years old, from Thousand Oaks CA. I am married to the love of my life and a mother of one beautiful daughter!
+
+  <p>I have enjoyed sewing and painting my whole life!  For the past seven years I have enjoyed working with over 60 amazing<br> brides making custom wedding dresses. I am currently working on my own wedding line for fall 2016.</p>
+
+  <p>I graduated with my BFA (Bachelors in Fines Art)  from Utah Valley University in April 2012.</p>
 </div>
