--- a/app/views/users/registrations/edit.html.erb
+++ b/app/views/users/registrations/edit.html.erb
@@ -1,8 +1,17 @@
-<h2>Edit <%= resource_name.to_s.humanize %></h2>
+<br>
+<div class="jumbotron">
+  <div class="col-sm-8">
+    <h1>Edit Your Account Info</h1>
+    <p>You can also cancel your account!</p>
+  </div>
+  <div class="text-center">
+    <h2><%= image_tag("logos/JMBL.png", width: '200px') %></h2>
+  </div>
+</div>
 
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }) do |f| %>
   <%= devise_error_messages! %>
-
+<div class="text-center">
   <div class="field">
     <p><%= f.label :username %><br />
     <%= f.text_field :username, autofocus: true %></p>
@@ -43,3 +52,4 @@
 <p>Unhappy? <%= button_to "Cancel my account", registration_path(resource_name), data: { confirm: "Are you sure?" }, method: :delete %></p>
 
 <%= link_to "Back", :back %>
+</div>
