--- a/app/views/users/registrations/new.html.erb
+++ b/app/views/users/registrations/new.html.erb
@@ -1,8 +1,16 @@
-<h2>Sign up</h2>
-
+<br>
+  <div class="jumbotron">
+    <div class="col-sm-8">
+      <h1>Sign up</h1>
+      <p>This is exciting, welcome!</p>
+    </div>
+    <div class="text-center">
+      <h2><%= image_tag("logos/JMBL.png", width: '200px') %></h2>
+    </div>
+  </div>
 <%= form_for(resource, as: resource_name, url: registration_path(resource_name)) do |f| %>
   <%= devise_error_messages! %>
-
+ <div class="text-center">
   <div class="field">
     <p><%= f.label :username %><br />
     <%= f.text_field :username, autofocus: true %></p>
@@ -29,3 +37,4 @@
 <% end %>
 
 <%= render "users/shared/links" %>
+</div>
